# guardian-sdk

./: .gitignore  API-LICENSE  ASSETS-LICENSE  LICENSE  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: audit.yml  publish.yml
benchmarks/: README.md  pyproject.toml  run_benchmark.py
benchmarks/datasets/: __init__.py  loader.py
benchmarks/datasets/bundled/: README.md  agentic_attack_prompts.jsonl  agentic_benign_prompts.jsonl  attack_prompts.jsonl  benign_prompts.jsonl
benchmarks/metrics/: __init__.py  classification.py  latency.py
benchmarks/reports/: __init__.py  json_reporter.py  markdown_reporter.py
benchmarks/reports/templates/: report.md.jinja
benchmarks/results/: guardian_v1.3.0_auto_2026-03-19.json  guardian_v1.3.0_auto_2026-03-19_pass1.json  guardian_v1.3.0_auto_2026-03-19_pass2.json  guardian_v1.3.0_auto_2026-03-20.json  guardian_v1.3.0_auto_2026-03-20.md  guardian_v1.3.0_auto_2026-03-20_pass1.json  guardian_v1.3.0_auto_2026-03-20_pass1.md  guardian_v1.3.0_auto_2026-03-20_pass2.json  guardian_v1.3.0_auto_2026-03-20_pass2.md  guardian_v1.3.0_licensed_2026-03-19.json  guardian_v1.3.0_licensed_2026-03-20_pass1.json  guardian_v1.3.0_licensed_2026-03-20_pass1.md  guardian_v1.3.0_licensed_2026-03-20_pass2.json  guardian_v1.3.0_licensed_2026-03-20_pass2.md  guardian_v1.8.0_auto_2026-04-27_pass1.json  guardian_v1.8.0_auto_2026-04-27_pass1.md  guardian_v1.8.0_auto_2026-04-27_pass2.json  guardian_v1.8.0_auto_2026-04-27_pass2.md  guardian_v1.8.0_auto_2026-04-28_pass1.json  guardian_v1.8.0_auto_2026-04-28_pass1.md  guardian_v1.8.0_auto_2026-04-28_pass2.json  guardian_v1.8.0_auto_2026-04-28_pass2.md  guardian_v2.6.5_auto_2026-06-07.json  guardian_v2.6.5_auto_2026-06-07.md  guardian_v2.6.5_auto_2026-06-07_pass1.json  guardian_v2.6.5_auto_2026-06-07_pass1.md  guardian_v2.6.5_auto_2026-06-07_pass2.json  guardian_v2.6.5_auto_2026-06-07_pass2.md
benchmarks/runners/: __init__.py  base_runner.py  baseline_runner.py  guardian_runner.py
ethicore_guardian/: __init__.py  audit.py  cli.py  community_guardian.py  guardian.py  integrity.py  license.py  versions.py
ethicore_guardian/analyzers/: __init__.py  automated_scan_detector.py  behavioral_analyzer.py  context_tracker.py  indirect_injection_analyzer.py  ml_inference_engine.py  pattern_analyzer.py  semantic_analyzer.py  threat_detector.py
ethicore_guardian/data/: integrity_manifest.json  threat_patterns.py
ethicore_guardian/models/: ml_learning.json  special_tokens.json  vocab.json
ethicore_guardian/providers/: __init__.py  _agentic_guards.py  anthropic_provider.py  azure_provider.py  base_provider.py  bedrock_provider.py  deepseek_provider.py  gemini_provider.py  guardian_ollama_provider.py  langchain_callback.py  litellm_provider.py  local_openai_compat_provider.py  minimax_provider.py  mistral_provider.py  openai_provider.py  perplexity_provider.py  xai_provider.py
ethicore_guardian/tests/: __init__.py
ethicore_guardian/utils/: __init__.py  config.py  logger.py
examples/: __init__.py
scripts/: generate_model_signatures.py  mask_secret.py  regenerate_embeddings.py  retrain_guardian_model.py
tests/: __init__.py  basic_pattern_test.py  conftest.py  focused_test.py  guardian_test.py  test_azure_provider.py  test_bedrock_provider.py  test_behavioral_analyzer.py  test_community_context_aware.py  test_context_tracker.py  test_correction.py  test_deepseek_provider.py  test_embeddings.py  test_gaps_14_16_video_toolchain.py  test_gaps_17_20_jailbreak_supply.py  test_gaps_21_23_model_legal_coding.py  test_gaps_24_26_profile_vuln_cred.py  test_gaps_27_29_session_audio_worm.py  test_gaps_30_32_harness_deser_exhaustion.py  test_gemini_provider.py  test_integration.py  test_inter_agent_message_validator.py  test_langchain_callback.py  test_language_detector.py  test_license.py  test_litellm_provider.py  test_mcp_schema_validator.py  test_minimax.py  test_mistral_provider.py  test_ml_inference_engine.py  test_multilingual_agentic.py  test_multilingual_semantic_analyzer.py  test_openai.py  test_pattern_analyzer.py  test_perplexity_provider.py  test_phase3_hardening.py  test_phase4_threat_library.py  test_response_anomaly_detector.py  test_sdk.py  test_semantic_analyzer.py  (+8 more)
typosquatting/ethicore-engine-gaurdian/: pyproject.toml
typosquatting/ethicore-engine-gaurdian/ethicore_engine_gaurdian-0.0.1/: PKG-INFO  README.md
typosquatting/ethicore-engine-gaurdian/ethicore_engine_gaurdian-0.0.1/ethicore_engine_gaurdian/: __init__.py
typosquatting/ethicore-engine-guardain/: pyproject.toml
typosquatting/ethicore-engine-guardain/ethicore_engine_guardain-0.0.1/: PKG-INFO  README.md
typosquatting/ethicore-engine-guradian/: README.md  pyproject.toml
typosquatting/ethicore-engine-guradian/ethicore_engine_guradian-0.0.1/: PKG-INFO
typosquatting/ethicore-guardian/ethicore_guardian-0.0.1/: PKG-INFO  README.md  pyproject.toml
