[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ethicore-guardian-benchmarks"
version = "1.0.0"
description = "Benchmark suite for Ethicore Engine™ Guardian SDK"
requires-python = ">=3.8"
dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
hf = [
    # HuggingFace datasets — optional, needed for full benchmark run
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "benchmark: benchmark tests (may require HF downloads)",
    "quick: fast benchmark tests using bundled data only",
]
